--- a/main.html
+++ b/main.html
@@ -8,19 +8,33 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-<div class="progress-container">
-        <div class="progress" id="progress"></div>
-        <div class="circle active" id="circle-1">1</div>
-        <div class="circle" id="circle-2">2</div>
-        <div class="circle" id="circle-3">3</div>
-        <div class="circle" id="circle-4">4</div>
-        <div class="circle" id="circle-5">5</div>
-    </div>
-    <div class="buttons">
-        <button id="prev" disabled>Prev</button>
-        <button id="next">Next</button>
-    </div>
-	
+	<div class="container">
+		<div class="progress-bar">
+			<div class="circles">
+				<div class="circle active" id="circle-1">1</div>
+				<div class="line-container">
+					<div class="line" id="line-2"></div>
+				</div>
+				<div class="circle" id="circle-2">2</div>
+				<div class="line-container">
+					<div class="line" id="line-3"></div>
+				</div>
+				<div class="circle" id="circle-3">3</div>
+				<div class="line-container">
+					<div class="line" id="line-4"></div>
+				</div>
+				<div class="circle" id="circle-4">4</div>
+				<div class="line-container">
+					<div class="line" id="line-5"></div>
+				</div>
+				<div class="circle" id="circle-5">5</div>
+			</div>
+			<div class="buttons"> 
+				<button disabled class="button" id="prev">Prev</button>
+				<button class="button" id="next">Next</button>
+			</div>
+		</div>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
